Change LimeKeywordBiasDetector API and add a bit more stats to the output

--- a/notebooks/test-0.0.1-twitter-disaster.ipynb
+++ b/notebooks/test-0.0.1-twitter-disaster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "5bfdc6f1-6926-458d-b825-c37f12a2932e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "dd3f06ea-6bc8-4be9-8515-5771d1762a08",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "136169e8-ffb7-4326-b387-3c0e8c9fddcf",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "6cb0361b-9a49-48a8-89ba-79301470a39b",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "209acd8a-0920-4de4-ad30-60cf950ace52",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "6b28d4aa-17ef-4165-b43b-9bb81a3ee6fd",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "ccc41891-f3e7-4935-8d3f-54876c388cef",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "                ('logisticregression', LogisticRegression())])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "id": "086aed03-08e7-4382-88ed-92e706c22ed1",
    "metadata": {},
    "outputs": [
@@ -243,10 +243,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 9,
    "id": "7736d2d2-cdcc-466a-ace1-7f6cd5759cf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tobias/.cache/pypoetry/virtualenvs/biaslyze-OjqpgMw8-py3.8/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from biaslyze.concept_detectors import KeywordConceptDetector\n",
     "from biaslyze.evaluators import LimeBiasEvaluator"
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 10,
    "id": "9409fa38-ff39-4fc1-a97c-7527be569f76",
    "metadata": {},
    "outputs": [],
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 11,
    "id": "ff007a97-b8cb-41c1-9fb8-cf04ec78669f",
    "metadata": {},
    "outputs": [],
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 12,
    "id": "9b316b8a-1b41-4aaf-a917-04754a9adad7",
    "metadata": {},
    "outputs": [
@@ -284,7 +293,7 @@
        "72"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 13,
    "id": "c9c82119-7a99-48fd-95cd-8c9d22096cc6",
    "metadata": {
     "scrolled": true,
@@ -379,7 +388,7 @@
        " \"#LonePine remembered around Australia as 'descendants' grow via @666canberra #Gallipoli #WW1\\n \"]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 14,
    "id": "9399c76a-2299-49c9-a111-3b125798e807",
    "metadata": {},
    "outputs": [],
@@ -408,17 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 15,
    "id": "83c61a69-1141-4a76-b372-e2e33857882f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bias_detector = LimeKeywordBiasDetector(predict_func=clf.predict_proba, bias_evaluator=LimeBiasEvaluator(n_lime_samples=500), n_top_keywords=10)"
+    "bias_detector = LimeKeywordBiasDetector(bias_evaluator=LimeBiasEvaluator(n_lime_samples=500), n_top_keywords=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 16,
    "id": "c2cffca2-67f3-4024-b23a-d03eaa83ae05",
    "metadata": {
     "scrolled": true,
@@ -429,17 +438,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 13/13 [00:02<00:00,  5.26it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 13/13 [00:02<00:00,  5.88it/s]\n"
      ]
     }
    ],
    "source": [
-    "detection_res = bias_detector.detect(texts=df.text[500:600])"
+    "detection_res = bias_detector.detect(texts=df.text[500:600], predict_func=clf.predict_proba)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 17,
    "id": "fc086f59-23dd-456b-a88e-8e49060f3e13",
    "metadata": {},
    "outputs": [
@@ -448,8 +457,8 @@
      "output_type": "stream",
      "text": [
       "Detected 11 samples with potential issues.\n",
-      "    Potentially problematic concepts detected: {'nationality', 'religion'}\n",
-      "    Based on keywords: {'muslims', 'australia', 'israeli', 'christian'}.\n"
+      "    Potentially problematic concepts detected: Counter({'nationality': 11, 'religion': 10})\n",
+      "    Based on keywords: Counter({'israeli': 10, 'muslims': 10, 'christian': 4, 'australia': 1}).\n"
      ]
     }
    ],
@@ -459,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 18,
    "id": "c6a1e029-7dbf-4649-840b-3f21d501d253",
    "metadata": {
     "scrolled": true,
@@ -470,16 +479,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
+      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
+      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
       "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
       "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
       "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
+      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
       "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
+      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
+      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
       "''#LonePine remembered around Australia as 'descendants' grow via @666canberra #Gallipoli #WW1\n",
       " '' might contain bias ['nationality']; reasons: ['australia']\n"
      ]
@@ -499,29 +508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 19,
    "id": "77610f61-efe3-4d56-9189-6572a12b7cae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 483/483 [00:00<00:00, 53.1kB/s]\n",
-      "Downloading: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 268M/268M [01:13<00:00, 3.65MB/s]\n",
-      "Downloading: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 28.0/28.0 [00:00<00:00, 7.22kB/s]\n",
-      "Downloading: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 232k/232k [00:00<00:00, 283kB/s]\n",
-      "Downloading: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 466k/466k [00:01<00:00, 279kB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from biaslyze.bias_detectors import MaskedKeywordBiasDetector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 20,
    "id": "be8494f2-41ba-48ca-b32f-b304b2dd2779",
    "metadata": {},
    "outputs": [],
@@ -531,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 21,
    "id": "3c1e31e6-f6fd-4883-808d-30c5a9ea0e3c",
    "metadata": {
     "scrolled": true,
@@ -542,7 +539,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 59/59 [01:14<00:00,  1.25s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 59/59 [01:04<00:00,  1.09s/it]\n"
      ]
     }
    ],
@@ -552,19 +549,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 22,
    "id": "8b92c3d2-d255-4cc2-a5cf-9c7ca9d79adf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Detected 16 samples with potential issues.\n",
-       "    Potentially problematic concepts detected: {'nationality', 'religion'}\n",
-       "    Based on keywords: {'muslim', 'syrian', 'palestine', 'syria', 'california', 'greece', 'myanmar', 'israel', 'israeli'}."
+       "Detected 18 samples with potential issues.\n",
+       "    Potentially problematic concepts detected: Counter({'nationality': 15, 'religion': 3})\n",
+       "    Based on keywords: Counter({'israel': 9, 'california': 4, 'muslim': 2, 'israeli': 2, 'myanmar': 1, 'syrian': 1, 'syria': 1, 'jew': 1, 'jewish': 1, 'palestine': 1, 'greece': 1})."
       ]
      },
-     "execution_count": 321,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 23,
    "id": "53b4d335-232e-4f16-855e-27cc3dc38cc5",
    "metadata": {},
    "outputs": [
@@ -591,8 +588,10 @@
       "''ANNIHILATED IN DAMASCUS: SYRIAN ARMY GRINDS Û÷ALLOOSH AND HIS GANG INTO THE MANURE PILE\n",
       "'' might contain bias ['nationality']; reasons: ['syrian', 'syria']\n",
       "''#Christians United for #Israel (#CUFI): Jews should convert soon or die by armageddon  #US '' might contain bias ['nationality']; reasons: ['israel']\n",
+      "''Two Jewish Terrorists Charged In Historic-Church Arson | The Ugly Truth  '' might contain bias ['religion']; reasons: ['jew', 'jewish']\n",
       "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel '' might contain bias ['nationality']; reasons: ['israel']\n",
       "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel '' might contain bias ['nationality']; reasons: ['israel']\n",
+      "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel: Posters for Shira Banki and A... '' might contain bias ['nationality']; reasons: ['israel']\n",
       "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel '' might contain bias ['nationality']; reasons: ['israel']\n",
       "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel '' might contain bias ['nationality']; reasons: ['israel']\n",
       "''Arson suspect linked to 30 fires caught in Northern California  (via @latimes)'' might contain bias ['nationality']; reasons: ['california']\n",
