Improve style and lint

--- a/notebooks/test-0.0.1-twitter-disaster.ipynb
+++ b/notebooks/test-0.0.1-twitter-disaster.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "3c1e31e6-f6fd-4883-808d-30c5a9ea0e3c",
    "metadata": {
     "scrolled": true,
@@ -539,29 +539,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 59/59 [01:04<00:00,  1.09s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 13/13 [00:23<00:00,  1.80s/it]\n"
      ]
     }
    ],
    "source": [
-    "detection_res = bias_detector.detect(texts=df.text[0:500])"
+    "detection_res = bias_detector.detect(texts=df.text[500:600])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "8b92c3d2-d255-4cc2-a5cf-9c7ca9d79adf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Detected 18 samples with potential issues.\n",
-       "    Potentially problematic concepts detected: Counter({'nationality': 15, 'religion': 3})\n",
-       "    Based on keywords: Counter({'israel': 9, 'california': 4, 'muslim': 2, 'israeli': 2, 'myanmar': 1, 'syrian': 1, 'syria': 1, 'jew': 1, 'jewish': 1, 'palestine': 1, 'greece': 1})."
+       "Detected 1 samples with potential issues.\n",
+       "    Potentially problematic concepts detected: Counter({'nationality': 1})\n",
+       "    Based on keywords: Counter({'german': 1})."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "53b4d335-232e-4f16-855e-27cc3dc38cc5",
    "metadata": {},
    "outputs": [
@@ -580,25 +580,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "''13,000 people receive #wildfires evacuation orders in California '' might contain bias ['nationality']; reasons: ['california']\n",
-      "''#Flood in Bago Myanmar #We arrived Bago'' might contain bias ['nationality']; reasons: ['myanmar']\n",
-      "''How the West was burned: Thousands of wildfires ablaze in California alone '' might contain bias ['nationality']; reasons: ['california']\n",
-      "''How the West was burned: Thousands of wildfires ablaze in #California alone  #climate #energy '' might contain bias ['nationality']; reasons: ['california']\n",
-      "''One thing for sure-God has promised Israel will not be annihilated. But...the horror of Iran w/nukes. '' might contain bias ['nationality']; reasons: ['israel']\n",
-      "''ANNIHILATED IN DAMASCUS: SYRIAN ARMY GRINDS Û÷ALLOOSH AND HIS GANG INTO THE MANURE PILE\n",
-      "'' might contain bias ['nationality']; reasons: ['syrian', 'syria']\n",
-      "''#Christians United for #Israel (#CUFI): Jews should convert soon or die by armageddon  #US '' might contain bias ['nationality']; reasons: ['israel']\n",
-      "''Two Jewish Terrorists Charged In Historic-Church Arson | The Ugly Truth  '' might contain bias ['religion']; reasons: ['jew', 'jewish']\n",
-      "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel '' might contain bias ['nationality']; reasons: ['israel']\n",
-      "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel '' might contain bias ['nationality']; reasons: ['israel']\n",
-      "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel: Posters for Shira Banki and A... '' might contain bias ['nationality']; reasons: ['israel']\n",
-      "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel '' might contain bias ['nationality']; reasons: ['israel']\n",
-      "''Mourning notices for stabbing arson victims stir Û÷politics of griefÛª in Israel '' might contain bias ['nationality']; reasons: ['israel']\n",
-      "''Arson suspect linked to 30 fires caught in Northern California  (via @latimes)'' might contain bias ['nationality']; reasons: ['california']\n",
-      "''Horrific attack on wife by muslim in Italy  LiveLeak #News'' might contain bias ['religion']; reasons: ['muslim']\n",
-      "''Israeli forces raid home of alleged car attack suspect  #palestine'' might contain bias ['nationality']; reasons: ['israel', 'israeli', 'palestine']\n",
-      "''Israeli helicopters that attacked civilians in Gaza just completed exercises in Greece.'' might contain bias ['nationality']; reasons: ['israel', 'israeli', 'greece']\n",
-      "''#PT: The unit attacked by IS was responsible for targeting Muslim Scholars and imprisoning the youth. '' might contain bias ['religion']; reasons: ['muslim']\n"
+      "''A young German stormtrooper engaged in the Battle of the Somme 1916. [800 ÌÑ 582 ] '' might contain bias ['nationality']; reasons: ['german']\n"
      ]
     }
    ],
