Add option for tokenization in detection process, add basic gender concept, improve outprints

--- a/notebooks/test-0.0.1-twitter-disaster.ipynb
+++ b/notebooks/test-0.0.1-twitter-disaster.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "9399c76a-2299-49c9-a111-3b125798e807",
    "metadata": {},
    "outputs": [],
@@ -417,17 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "id": "83c61a69-1141-4a76-b372-e2e33857882f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bias_detector = LimeKeywordBiasDetector(bias_evaluator=LimeBiasEvaluator(n_lime_samples=500), n_top_keywords=10)"
+    "bias_detector = LimeKeywordBiasDetector(bias_evaluator=LimeBiasEvaluator(n_lime_samples=500), n_top_keywords=10, use_tokenizer=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "id": "c2cffca2-67f3-4024-b23a-d03eaa83ae05",
    "metadata": {
     "scrolled": true,
@@ -438,7 +438,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 13/13 [00:02<00:00,  5.88it/s]\n"
+      "2023-03-07 09:51:49.907 | INFO     | biaslyze.concept_detectors:detect:32 - Started keyword-based concept detection on 100 texts...\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 86.63it/s]\n",
+      "2023-03-07 09:51:51.067 | INFO     | biaslyze.concept_detectors:detect:46 - Done. Found 15 texts with protected concepts.\n",
+      "2023-03-07 09:51:51.068 | INFO     | biaslyze.evaluators:evaluate:40 - Started bias detection on 15 samples...\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 15/15 [00:03<00:00,  4.23it/s]\n"
      ]
     }
    ],
@@ -448,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "id": "fc086f59-23dd-456b-a88e-8e49060f3e13",
    "metadata": {},
    "outputs": [
@@ -457,8 +461,8 @@
      "output_type": "stream",
      "text": [
       "Detected 11 samples with potential issues.\n",
-      "    Potentially problematic concepts detected: Counter({'nationality': 11, 'religion': 10})\n",
-      "    Based on keywords: Counter({'israeli': 10, 'muslims': 10, 'christian': 4, 'australia': 1}).\n"
+      "    Potentially problematic concepts detected: [('nationality', 11), ('religion', 10)]\n",
+      "    Based on keywords: [('israeli', 10), ('christian', 8), ('muslims', 8), ('australia', 1)].\n"
      ]
     }
    ],
@@ -468,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
    "id": "c6a1e029-7dbf-4649-840b-3f21d501d253",
    "metadata": {
     "scrolled": true,
@@ -479,23 +483,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims', 'christian']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
-      "''Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... '' might contain bias ['nationality', 'religion']; reasons: ['israeli', 'muslims']\n",
-      "''#LonePine remembered around Australia as 'descendants' grow via @666canberra #Gallipoli #WW1\n",
-      " '' might contain bias ['nationality']; reasons: ['australia']\n"
+      "Concept: nationality\n",
+      "[{'reason': ['israeli', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['australia'],\n",
+      "  'text': \"#LonePine remembered around Australia as 'descendants' grow via \"\n",
+      "          '@666canberra #Gallipoli #WW1\\n'\n",
+      "          ' '}]\n",
+      "Concept: religion\n",
+      "[{'reason': ['israeli', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'muslims', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '},\n",
+      " {'reason': ['israeli', 'christian'],\n",
+      "  'text': 'Christian Attacked by Muslims at the Temple Mount after Waving '\n",
+      "          'Israeli Flag via Pamela Geller - ... '}]\n"
      ]
     }
    ],
    "source": [
-    "detection_res.details()"
+    "detection_res.details(group_by_concept=True)"
    ]
   },
   {
