Update toxic comments usecase with huggingface sentiment model

--- a/notebooks/test-0.0.1-toxic-comments.ipynb
+++ b/notebooks/test-0.0.1-toxic-comments.ipynb
@@ -481,13 +481,139 @@
    "id": "cf858ae3-65db-44db-8ae9-f08383e3fce9",
    "metadata": {},
    "source": [
-    "## Train a huggingface model"
+    "## Testing a sentiment analysis model from huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "077c6957-6718-4344-9154-6caab25ff333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline\n",
+    "from torch.utils.data import Dataset\n",
+    "\n",
+    "\n",
+    "classifier = pipeline(model=\"distilbert-base-uncased-finetuned-sst-2-english\", top_k=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "c771fd93-fb08-488b-8772-cbf49e760442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyDataset(Dataset):\n",
+    "    def __init__(self, data):\n",
+    "        super().__init__()\n",
+    "        self.data = data\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, i):\n",
+    "        return self.data[i]\n",
+    "\n",
+    "\n",
+    "def predict_sentiment(texts):\n",
+    "    data = MyDataset(texts)\n",
+    "    proba = []\n",
+    "    for res in classifier(data):\n",
+    "        proba_array = []\n",
+    "        for p in sorted(res, key=lambda d: d['label'], reverse=True):\n",
+    "            proba_array.append(p.get(\"score\"))\n",
+    "        proba.append(np.array(proba_array))\n",
+    "    return np.array(proba) / np.array(proba).sum(axis=1)[:,None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "45e35216-b250-4b02-af4e-8abc7ecc25fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bias_detector = LimeKeywordBiasDetector(\n",
+    "    bias_evaluator=LimeBiasEvaluator(n_lime_samples=500),\n",
+    "    n_top_keywords=10,\n",
+    "    use_tokenizer=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "ba49896f-3d34-4cab-9ae2-632fe2f59f52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-07 11:30:16.506 | INFO     | biaslyze.concept_detectors:detect:33 - Started keyword-based concept detection on 50 texts...\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:00<00:00, 52.76it/s]\n",
+      "2023-03-07 11:30:17.461 | INFO     | biaslyze.concept_detectors:detect:49 - Done. Found 14 texts with protected concepts.\n",
+      "2023-03-07 11:30:17.463 | INFO     | biaslyze.evaluators:evaluate:41 - Started bias detection on 14 samples...\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 14/14 [11:35<00:00, 49.68s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_texts = df.comment_text.sample(50)\n",
+    "detection_res = bias_detector.detect(texts=test_texts, predict_func=predict_sentiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "6de5fe94-f5f0-4181-8c0b-2dd09d91bba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected 1 samples with potential issues.\n",
+      "    Potentially problematic concepts detected: [('religion', 1), ('gender', 1)]\n",
+      "    Based on keywords: [('muslim', 1), ('man', 1)].\n"
+     ]
+    }
+   ],
+   "source": [
+    "detection_res.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "9dda7ab7-90f1-4eed-a911-1d4b96cd28ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concept: religion\n",
+      "[{'reason': ['muslim', 'man'],\n",
+      "  'text': 'irrelevent. straw man arguement. No one said HT alone was '\n",
+      "          'radicallzing Muslim youth.'}]\n",
+      "Concept: gender\n",
+      "[{'reason': ['muslim', 'man'],\n",
+      "  'text': 'irrelevent. straw man arguement. No one said HT alone was '\n",
+      "          'radicallzing Muslim youth.'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "detection_res.details(group_by_concept=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebde13c6-c9dc-4ed7-bfe1-f3349111e117",
+   "id": "dc7ba0eb-4e3e-48f4-b982-1c55ea3c843b",
    "metadata": {},
    "outputs": [],
    "source": []
