updated notebook match tutorial md

--- a/notebooks/Tutorial_biaslyze_toxic-comments-usecase.ipynb
+++ b/notebooks/Tutorial_biaslyze_toxic-comments-usecase.ipynb
@@ -5,7 +5,7 @@
    "id": "9ca7febe-a5e3-41c2-aa2b-a7e56db76969",
    "metadata": {},
    "source": [
-    "# Tutorial: Test biaslyze with the toxic comments dataset\n",
+    "# Tutorial: How to identify bias in toxic comments with Biaslyze\n",
     "\n",
     "In this notebook you will see how to test a model with our Biaslyze tool in order to inspect it on hints for possible bias. Biaslyze uses counterfactual token fairness scores to evaluate the significance of concepts and attributes sensible to discrimination within the models decisions. \n",
     "To show you how Biaslyze works we use data from a Kaggle challenge and build a model that classifies texts from online comments as toxic or not toxic. \n",
@@ -33,19 +33,6 @@
    "outputs": [],
    "source": [
     "!pip install biaslyze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "dd3f06ea-6bc8-4be9-8515-5771d1762a08",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('/home/stinal/Documents/BIASLYZE/repositories/biaslyze/')"
    ]
   },
   {
@@ -201,7 +188,7 @@
    "metadata": {},
    "source": [
     "## Now make the classification problem binary: \n",
-    "Apart from the descriptive multi-label toxicity labels, there is another target column with binary class signifying if a comment text is toxic or non-toxic."
+    "Apart from the descriptive multi-label toxicity labels, there is another target column with a binary class signifying if a comment text is toxic or non-toxic."
    ]
   },
   {
@@ -313,7 +300,7 @@
    "source": [
     "## Counterfactual token based bias detection\n",
     "\n",
-    "Now that we have a model to test, lets evaluate it with the Biaslyze tool and test the sensible concepts. \n",
+    "Now that we have a model to test, lets evaluate it with the Biaslyze tool and test the sensible concepts for possible bias. \n",
     "Biaslyze takes keywords representing sensitive concepts and perturbates them with the other keywords from the same concept to evaluate its significance for the models prediction."
    ]
   },
@@ -902,14 +889,6 @@
     "output_notebook()\n",
     "show(viz)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f9616be-34cf-4803-9e41-01f3bbd9a0a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
